--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="ITYet中心">
 	<meta name="robots" content="All">
 	<!--数据抓取完成-->
-	<title>ITYet中心-ITYet.COM</title>
+	<title>ItYet中心</title>
 	<link rel="icon" href="statics/img/ityet.ico">
 	<!-- 自适应 -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
