--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 <div class="cleft_topbg">
                     <div class="cleftbg_img"><img src="statics/img/head.gif" alt="头像"></div>
                 </div>
-                <div class="cleftbg_p">要每天都有好心情吖~</div>
+                <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
             <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet01.png"/><span>欢迎访问</span></li>
             <li id="cleft_li05"><img src="statics/font/ityet05.png"/><span>站点导航</span></li>
-            <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>
             <li id="cleft_li02"><img src="statics/font/ityet02.png"/><span>个人简介</span></li>
-            <li id="cleft_li09"><img src="statics/font/ityet03.png"/><span>公司介绍</span></li>
+            <li id="cleft_li09"><img src="statics/font/ityet03.png"/><span>项目介绍</span></li>
             <li id="cleft_li04"><img src="statics/font/ityet04.png"/><span>商业合作</span></li>
             <li id="cleft_li03"><img src="statics/font/ityet05.png"/><span>关于本站</span></li>
+            <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>
             <li id="cleft_li08"><img src="statics/font/ityet01.png"/><span>友情链接</span></li>
             <li id="cleft_li06" onclick="AddFavorite('Leo’Blog',location.href)"><img src="statics/font/ityet06.png"/><span>收藏页面</span></li>
 
@@ -86,14 +86,11 @@
                         <p>I'm a hard working coder</p>
                     </div>
                     <div class="nav01_fpw">
-                        <p>愿成长 - 不负众望</p>
+                        <p>愿吾成长 - 不负所望</p>
                     </div>
                 </div>
                 <!-- 版权信息，可修改,可删除,不强求 -->
-                <div class="nav01_fooder">版权所有:ITYet工作室 &nbsp;&nbsp;|&nbsp;&nbsp; 备案号:<a
-                        href="https://beian.miit.gov.cn" target="_blank">浙ICP备17006560号-1</a>
-                    &nbsp;&nbsp;|&nbsp;&nbsp; © 2020-2023 All Copyright Reserved
-                </div>
+                <div class="nav01_fooder">版权所有:ITYet工作室 &nbsp;&nbsp;|&nbsp;&nbsp; 备案号:<a href="https://beian.miit.gov.cn" target="_blank">浙ICP备17006560号-1</a>&nbsp;&nbsp;|&nbsp;&nbsp; © 2020-2023 All Copyright Reserved</div>
             </div>
 
             <!-- 第二页 - 个人简介 -->
@@ -742,8 +739,6 @@
                             <p>
                                 &nbsp;
                             </p>
-
-
                 </div>
             </div>
             <div class="exn02_kj exmb03">
@@ -839,7 +834,7 @@
             <!-- 第五页-内容区域 -->
             <div class="exn5_nr">
                 <div class="exnav05_centent_tit">
-                    <h2>ߦ䥮視駫駂鰟愼/h2>
+                    <h2>ߦ䥮視駫駂鰟愼/h2></h2>
                         <p>注:如果官方站点打不开则因为服务器被DDOS了</p>
                 </div>
                 <!-- 作品展示模板NO1 -->
@@ -902,7 +897,7 @@
             <!--团队成员优秀站点-->
             <div class="exn5_nr">
                 <div class="exnav05_centent_tit">
-                    <h2>ߦ䥛⩘麗॑肷优秀站点ߦ伯h2>
+                    <h2>ߦ䥛⩘麗॑肷优秀站点ߦ伯h2></h2>
                         <p>优秀的站点就应该被展示出来！</p>
                 </div>
                 <!-- 作品展示模板NO1 -->
