--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
                 </div>
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
-            <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet01.png"/><span>欢迎访问</span></li>
-            <li id="cleft_li05"><img src="statics/font/ityet05.png"/><span>站点导航</span></li>
-            <li id="cleft_li02"><img src="statics/font/ityet02.png"/><span>个人简介</span></li>
-            <li id="cleft_li09"><img src="statics/font/ityet03.png"/><span>项目介绍</span></li>
-            <li id="cleft_li04"><img src="statics/font/ityet04.png"/><span>商业合作</span></li>
-            <li id="cleft_li03"><img src="statics/font/ityet05.png"/><span>关于本站</span></li>
-            <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>
-            <li id="cleft_li08"><img src="statics/font/ityet01.png"/><span>友情链接</span></li>
+            <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
+            <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>站点导航</span></li>
+            <li id="cleft_li02"><img src="statics/font/ityet07.png"/><span>个人简介</span></li>
+            <li id="cleft_li04"><img src="statics/font/ityet05.png"/><span>联系站长</span></li>
+            <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
+<!--            <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
+            <li id="cleft_li08"><img src="statics/font/ityet03.png"/><span>友情链接</span></li>
             <li id="cleft_li06" onclick="AddFavorite('Leo’Blog',location.href)"><img src="statics/font/ityet06.png"/><span>收藏页面</span></li>
 
             <!-- <li class="cleft_bottom"><img src="statics/font/nav_bottom.png"><span>宽度设置</span></li> -->
@@ -83,7 +82,7 @@
                 <div class="nav01_right">
                     <div class="nav01_tpw">
                         <h3>我是一个技术宅</h3>
-                        <p>I'm a hard working coder</p>
+                        <p>I'm a hardworking coder</p>
                     </div>
                     <div class="nav01_fpw">
                         <p>愿吾成长 - 不负所望</p>
@@ -146,7 +145,7 @@
                     <p>
                         &nbsp;
                     </p>
-                    <h3>ߘ᧽᧫駚䨉ਗ਼ਡ짎異㼯h3>
+                    <h3>ߘ᧽᧫駚䨉ਗ਼ਡ짎異㼯h3></h3>
                         <p>
                             服务器最近遭受DDOS攻击，官方部分站点已瘫痪，恢复时间不确定。主页随时可能托管在Github或者虚拟主机上，速度相对较慢，请耐心等待恢复，还您一个舒适的欣赏环境。哈哈哈哈哈哈哈嗝~
                         </p>
@@ -211,7 +210,6 @@
                     <h5>划水摸鱼，闲无止境~</h5>
                     <p>2020-2021</p>
                     <p>我们是黑暗中照亮书本的明灯，光明下抒写思绪的墨笔。</p>
-
                 </div>
                 <div class="enav03_team">
                     <img src="statics/img/cnmteam01.png" alt="[组织者]">
@@ -240,7 +238,7 @@
                 <div class="nav05_centent">
                     <!-- 作品展示模板NO1 -->
                     <div class="nav05_centent_mb">
-                        <a href="https://itop.ga/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://blog.ityet.com" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp01.jpg" alt="[]"></div>
                             <h3>iNote学习笔记</h3>
                             <p>记录学习点滴</p>
@@ -249,7 +247,7 @@
                     </div>
                     <!-- 作品展示模板NO2 -->
                     <div class="nav05_centent_mb">
-                        <a href="https://ityet.com:44/" target="_blank" rel="noopener noreferrer">
+                        <a href="http://tool.ityet.com/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp02.jpg" alt="[]"></div>
                             <h3>iTool在线工具</h3>
                             <p>在线好用的开发工具~</p>
@@ -258,7 +256,7 @@
                     </div>
                     <!-- 作品展示模板NO3 -->
                     <div class="nav05_centent_mb">
-                        <a href="https://itmax.cn/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://dwz.itmax.cn/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
                             <h3>iShort短链接</h3>
                             <p>免费短链接分享！</p>
@@ -267,7 +265,7 @@
                     </div>
                     <!-- 作品展示模板NO4 -->
                     <div class="nav05_centent_mb">
-                        <a href="/game/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/game/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp04.jpg" alt="[]"></div>
                             <h3>iGame休闲小游戏</h3>
                             <p>快来放松一下~</p>
@@ -276,7 +274,7 @@
                     </div>
                     <!-- 作品展示模板NO5 -->
                     <div class="nav05_centent_mb">
-                        <a href="/coder" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/coder" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
                             <h3>iCoder程序员黄历</h3>
                             <p>今天凶吉预知~</p>
@@ -285,7 +283,7 @@
                     </div>
                     <!-- 作品展示模板NO6 -->
                     <div class="nav05_centent_mb">
-                        <a href="/picture" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/picture/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp01.jpg" alt="[]"></div>
                             <h3>iDesk壁纸</h3>
                             <p>换个壁纸换个心情</p>
@@ -294,7 +292,7 @@
                     </div>
                     <!-- 作品展示模板NO7 -->
                     <div class="nav05_centent_mb">
-                        <a href="webp2jpg/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/webp2jpg/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp02.jpg" alt="[]"></div>
                             <h3>iPic图片转换</h3>
                             <p>在线图片格式转换</p>
@@ -309,7 +307,7 @@
                     </div>
                     <!-- 作品展示模板NO1 -->
                     <div class="nav05_centent_mb">
-                        <a href="/screenshot/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/screenshot/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp01.jpg" alt="[]"></div>
                             <h3>朋友圈截图生成</h3>
                             <p>微商朋友圈，搞笑朋友圈生成~</p>
@@ -318,7 +316,7 @@
                     </div>
                     <!-- 作品展示模板NO2 -->
                     <div class="nav05_centent_mb">
-                        <a href="/coder" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/coder" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
                             <h3>iCoder程序员黄历</h3>
                             <p>今天凶吉预知~</p>
@@ -327,7 +325,7 @@
                     </div>
                     <!-- 作品展示模板NO3 -->
                     <div class="nav05_centent_mb">
-                        <a href="/particle/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/particle/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
                             <h3>科技感文字特效</h3>
                             <p>生成科技感的文字特效！</p>
@@ -336,7 +334,7 @@
                     </div>
                     <!-- 作品展示模板NO4 -->
                     <div class="nav05_centent_mb">
-                        <a href="/particle/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/particle/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
                             <h3>科技感文字特效</h3>
                             <p>生成科技感的文字特效！</p>
@@ -345,7 +343,7 @@
                     </div>
                     <!-- 作品展示模板NO5 -->
                     <div class="nav05_centent_mb">
-                        <a href="/avatar/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/avatar/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
                             <h3>微信头像生成</h3>
                             <p>国庆头像框在线生成</p>
@@ -354,7 +352,7 @@
                     </div>
                     <!-- 作品展示模板NO6 -->
                     <div class="nav05_centent_mb">
-                        <a href="/fc/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/fc/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp01.jpg" alt="[]"></div>
                             <h3>FC游戏模拟器</h3>
                             <p>怀念的儿时游戏机</p>
@@ -363,7 +361,7 @@
                     </div>
                     <!-- 作品展示模板NO7 -->
                     <div class="nav05_centent_mb">
-                        <a href="/qrcode/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/qrcode/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp02.jpg" alt="[]"></div>
                             <h3>二维码生成</h3>
                             <p>在线生成个性二维码</p>
@@ -599,12 +597,23 @@
                     <p>
                         自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
                     </p>
-
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>                    <p>
+                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                </p>                    <p>
+                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                </p>                    <p>
+                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                </p>                    <p>
+                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                </p>                    <p>
+                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                </p>
                 </div>
                 <!-- 图片托管 -->
                 <div class="nav08_kj">
                 </div>
-
             </div>
 
         </div>
