--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
+
+
     </script>
 </head>
 
@@ -50,15 +52,15 @@
                 </div>
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
-            <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
+            <li id="cleft_li01" style="background-color: #ececec;"><img
+                    src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
             <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>站点导航</span></li>
             <li id="cleft_li02"><img src="statics/font/ityet07.png"/><span>个人简介</span></li>
             <li id="cleft_li04"><img src="statics/font/ityet05.png"/><span>联系站长</span></li>
             <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
-<!--            <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
+            <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
+            <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
             <li id="cleft_li08"><img src="statics/font/ityet03.png"/><span>友情链接</span></li>
-            <li id="cleft_li06" onclick="AddFavorite('Leo’Blog',location.href)"><img src="statics/font/ityet06.png"/><span>收藏页面</span></li>
-
             <!-- <li class="cleft_bottom"><img src="statics/font/nav_bottom.png"><span>宽度设置</span></li> -->
         </ul>
 
@@ -89,7 +91,10 @@
                     </div>
                 </div>
                 <!-- 版权信息，可修改,可删除,不强求 -->
-                <div class="nav01_fooder">版权所有:ITYet工作室 &nbsp;&nbsp;|&nbsp;&nbsp; 备案号:<a href="https://beian.miit.gov.cn" target="_blank">浙ICP备17006560号-1</a>&nbsp;&nbsp;|&nbsp;&nbsp; © 2020-2023 All Copyright Reserved</div>
+                <div class="nav01_fooder">版权所有:ITYet工作室 &nbsp;&nbsp;|&nbsp;&nbsp; 备案号:<a
+                        href="https://beian.miit.gov.cn" target="_blank">浙ICP备17006560号-1</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                    © 2020-2023 All Copyright Reserved
+                </div>
             </div>
 
             <!-- 第二页 - 个人简介 -->
@@ -145,13 +150,13 @@
                     <p>
                         &nbsp;
                     </p>
-                    <h3>ߘ᧽᧫駚䨉ਗ਼ਡ짎異㼯h3></h3>
-                        <p>
-                            服务器最近遭受DDOS攻击，官方部分站点已瘫痪，恢复时间不确定。主页随时可能托管在Github或者虚拟主机上，速度相对较慢，请耐心等待恢复，还您一个舒适的欣赏环境。哈哈哈哈哈哈哈嗝~
-                        </p>
-                        <p>
-                            &nbsp;
-                        </p>
+                    <h3>知/识/掌/握</h3>
+                    <p>
+                        服务器最近遭受DDOS攻击，官方部分站点已瘫痪，恢复时间不确定。主页随时可能托管在Github或者虚拟主机上，速度相对较慢，请耐心等待恢复，还您一个舒适的欣赏环境。哈哈哈哈哈哈哈嗝~
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
                 </div>
                 <!-- 知识掌握 -->
                 <div class="nav02_kj mb03">
@@ -372,24 +377,23 @@
                 <p class="nav05_footer">你有酷酷或者实用的站点推荐嘛？~</p>
             </div>
 
+            <div id="nav07" class="iframe-container">
+                <iframe src="https://m.ityet.com/game/link/0.html" frameborder="0"></iframe>
+            </div>
             <!-- 第七页 - 本站源码 -->
-            <div id="nav07">
+            <div id="nav09">
                 <div class="nav07_bg">
                     <div class="nav07_bt">本站源码</div>
                 </div>
-
                 <!-- 写在前面 -->
                 <div class="nav07_kj">
-                    <h3>ߘ᥆鯥쨯前/面</h3>
+                    <h3>写在前面</h3>
                     <p>
                         此源码全开源发布，转载还请保留版权信息！
                     </p>
                     <p>
-                        官方网站：<a href="https://">HTTPS://</a>
+                        官方网站：<a href="https://">https://ityet.com</a>
                     </p>
-                    <p>
-
-
                     <p>
                         &nbsp;
                     </p>
@@ -599,23 +603,27 @@
                     </p>
                     <p>
                         自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>                    <p>
-                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                </p>                    <p>
-                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                </p>                    <p>
-                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                </p>                    <p>
-                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                </p>                    <p>
-                    自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                </p>
+                    </p>
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>
+                    <p>
+                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
+                    </p>
                 </div>
                 <!-- 图片托管 -->
                 <div class="nav08_kj">
                 </div>
             </div>
-
         </div>
 
 
@@ -844,7 +852,7 @@
             <div class="exn5_nr">
                 <div class="exnav05_centent_tit">
                     <h2>ߦ䥮視駫駂鰟愼/h2></h2>
-                        <p>注:如果官方站点打不开则因为服务器被DDOS了</p>
+                    <p>注:如果官方站点打不开则因为服务器被DDOS了</p>
                 </div>
                 <!-- 作品展示模板NO1 -->
                 <div class="exnav05_centent_mb">
@@ -907,7 +915,7 @@
             <div class="exn5_nr">
                 <div class="exnav05_centent_tit">
                     <h2>ߦ䥛⩘麗॑肷优秀站点ߦ伯h2></h2>
-                        <p>优秀的站点就应该被展示出来！</p>
+                    <p>优秀的站点就应该被展示出来！</p>
                 </div>
                 <!-- 作品展示模板NO1 -->
                 <div class="exnav05_centent_mb">
