--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <!--网站收录数据-->
     <meta charset="UTF-8">
     <meta name="language" content="zh-CN">
-    <meta name="title" content="ITYet中心">
+    <meta name="title" content="ITYet技术中心">
     <meta name="author" content="Leo">
     <meta name="description" content="Leo的个人主页">
-    <meta name="keywords" content="ITYet中心">
+    <meta name="keywords" content="ITYet技术中心">
     <meta name="robots" content="All">
     <!--数据抓取完成-->
-    <title>ItYet中心</title>
+    <title>ITYet技术中心</title>
     <link rel="icon" href="statics/img/ityet.ico">
     <!-- 自适应 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -35,11 +35,8 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
-
-
     </script>
 </head>
-
 <body>
 <!-- 电脑PC端 -->
 <div id="pc">
@@ -52,15 +49,14 @@
                 </div>
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
-            <li id="cleft_li01" style="background-color: #ececec;"><img
-                    src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
-            <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>站点导航</span></li>
-            <li id="cleft_li02"><img src="statics/font/ityet07.png"/><span>个人简介</span></li>
-            <li id="cleft_li04"><img src="statics/font/ityet05.png"/><span>联系站长</span></li>
-            <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
+            <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
+            <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>文章推荐</span></li>
             <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
             <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
-            <li id="cleft_li08"><img src="statics/font/ityet03.png"/><span>友情链接</span></li>
+            <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站推荐</span></li>
+            <li id="cleft_li02"><img src="statics/font/ityet05.png"/><span>站长介绍</span></li>
+            <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
+            <li id="cleft_li04"><img src="statics/font/ityet03.png"/><span>联系我们</span></li>
             <!-- <li class="cleft_bottom"><img src="statics/font/nav_bottom.png"><span>宽度设置</span></li> -->
         </ul>
 
@@ -211,9 +207,9 @@
             <!-- 第三页 - 站长团队 -->
             <div id="nav03">
                 <div class="enav03_p">
-                    <h3>ITmax<span>摸鱼工作室</span></h3>
+                    <h3>ITmax<span>技术组</span></h3>
                     <h5>划水摸鱼，闲无止境~</h5>
-                    <p>2020-2021</p>
+                    <p>2013-2050</p>
                     <p>我们是黑暗中照亮书本的明灯，光明下抒写思绪的墨笔。</p>
                 </div>
                 <div class="enav03_team">
@@ -225,12 +221,12 @@
                 </div>
             </div>
 
-            <!-- 第四页 - 商业合作 -->
+            <!-- 第四页 - 联系方式 -->
             <div id="nav04">
                 <div class="nav04_bg"></div>
                 <div class="nav04_zsc">
                     <div>
-                        <p>商业合作 - 微信二维码</p>
+                        <p>联系方式 - 微信二维码</p>
                         <img src="statics/img/qywx.png" alt="[企业微信二维码]" title="[企业微信二维码]">
                     </div>
                     <p>即使夜深人静，我们依然在努力！</p>
@@ -241,6 +237,10 @@
             <div id="nav05">
                 <!-- 第五页-内容区域 -->
                 <div class="nav05_centent">
+                    <div class="nav05_centent_tit">
+                        <h1>有趣的站点</h1>
+                        <p>优秀的站点，就要被展示出来！</p>
+                    </div>
                     <!-- 作品展示模板NO1 -->
                     <div class="nav05_centent_mb">
                         <a href="https://blog.ityet.com" target="_blank" rel="noopener noreferrer">
@@ -378,8 +378,23 @@
             </div>
 
             <div id="nav07" class="iframe-container">
-                <iframe src="https://m.ityet.com/game/link/0.html" frameborder="0"></iframe>
+                <iframe src="https://m.ityet.com/game/link/0.html"></iframe>
             </div>
+            <!-- 第八页 - 文章推荐 -->
+            <div id="nav08" class="iframe-container">
+                <!-- 第五页-头部图片动态 -->
+<!--                <div class="nav05_top">-->
+<!--                    <div class="nav05_topbgkj">-->
+<!--                        <div class="nav05_top_bg"></div>-->
+<!--                        <div class="nav05_top_tx01"></div>-->
+<!--                        <div class="nav05_top_tx02"></div>-->
+<!--                    </div>-->
+<!--                    <div class="nav05_top_fj"><img src="statics/img/nav05_fj.png" alt="△"></div>-->
+<!--                </div>-->
+                <!-- 文件托管 -->
+                <iframe src="home.html"></iframe>
+            </div>
+
             <!-- 第七页 - 本站源码 -->
             <div id="nav09">
                 <div class="nav07_bg">
@@ -584,48 +599,7 @@
                 <p class="ebpx7">--- 如果有好的想法或建议，可发送至站长邮箱(admin@qccce.com)，期待您的来信---</p>
             </div>
 
-            <!-- 第八页 - 站点展示 -->
-            <div id="nav08">
-                <!-- 第五页-头部图片动态 -->
-                <div class="nav05_top">
-                    <div class="nav05_topbgkj">
-                        <div class="nav05_top_bg"></div>
-                        <div class="nav05_top_tx01"></div>
-                        <div class="nav05_top_tx02"></div>
-                    </div>
-                    <div class="nav05_top_fj"><img src="statics/img/nav05_fj.png" alt="△"></div>
-                </div>
-                <!-- 文件托管 -->
-                <div class="nav08_kj">
-                    <h3>文/件/托/管</h3>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                    <p>
-                        自己弄个阿里云oss或者腾讯云cos，然后把css文件和js文件托管上去，速度会快好多。
-                    </p>
-                </div>
-                <!-- 图片托管 -->
-                <div class="nav08_kj">
-                </div>
-            </div>
         </div>
-
 
         <!-- 入场动画 -->
         <div id="etext"></div>
@@ -706,7 +680,6 @@
             <div class="exn02_zl">
                 <h3 class="exn_bt">个/人/介/绍</h3>
                 <div class="exn02_kjt">
-
                     <p>
                         本人学识渊博，经验丰富，代码风骚，效率恐怖。C/C＋＋，java，php无不精通，熟练掌握各种框架。
                     </p>
@@ -732,30 +705,30 @@
                         &nbsp;
                     </p>
 
-                    <h3>ߘ᧽᧫駚䨉ਗ਼ਡ짎異㼯h3>
-                        <p>
-                            服务器最近遭受DDOS攻击，官方部分站点已瘫痪，恢复时间不确定。主页随时可能托管在Github或者虚拟主机上，速度相对较慢，请耐心等待恢复，还您一个舒适的欣赏环境。哈哈哈哈哈哈哈嗝~
-                        </p>
-                        <p>
-                            &nbsp;
-                        </p>
+                    <h3 class="exn_bt">个/人/介/绍</h3>
+                    <p>
+                        服务器最近遭受DDOS攻击，官方部分站点已瘫痪，恢复时间不确定。主页随时可能托管在Github或者虚拟主机上，速度相对较慢，请耐心等待恢复，还您一个舒适的欣赏环境。哈哈哈哈哈哈哈嗝~
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
 
-                        <h3>ߘ᧽᧫馺ৠἯh3>
-                            <p>
-                                全开源版本发布
-                            </p>
-                            <p>
-                                全开源版本发布
-                            </p>
-                            <p>
-                                全开源版本发布
-                            </p>
-                            <p>
-                                全开源版本发布
-                            </p>
-                            <p>
-                                &nbsp;
-                            </p>
+                    <h3 class="exn_bt">个/人/介/绍</h3>
+                    <p>
+                        全开源版本发布
+                    </p>
+                    <p>
+                        全开源版本发布
+                    </p>
+                    <p>
+                        全开源版本发布
+                    </p>
+                    <p>
+                        全开源版本发布
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
                 </div>
             </div>
             <div class="exn02_kj exmb03">
@@ -834,7 +807,7 @@
         <div id="exnav04">
             <div class="exnav04_zsc">
                 <div>
-                    <p>商业合作 - 微信二维码</p>
+                    <p>联系方式 - 微信二维码</p>
                     <img src="statics/img/qywx.png" alt="[联系二维码]" title="[联系二维码]">
                 </div>
                 <p>即使夜深人静，我们依然在努力！</p>
@@ -1009,5 +982,4 @@
 </div>
 <p id="eixp">当你在凝视深渊的时候，深渊也正在凝视着你！</p>
 </body>
-
 </html>
