--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 <!--                    <div class="nav05_top_fj"><img src="statics/img/nav05_fj.png" alt="△"></div>-->
 <!--                </div>-->
                 <!-- 文件托管 -->
-                <iframe src="home.html"></iframe>
+                <iframe src="/book"></iframe>
             </div>
 
             <!-- 第七页 - 本站源码 -->
