--- a/home/index.html
+++ b/home/index.html
@@ -16,9 +16,9 @@ description: "分享正在看和看过想看的一些书籍"
                         </div>
                     </a>
                     <div class="item-slant reverse-slant  bg-{{ posts.background }}"></div>
-                    <div class="item-slant">	<div class="liberxue-title">
-                        原创
-                    </div></div>
+                    <div class="item-slant">
+                        <div class="liberxue-title">原创</div>
+                    </div>
                     <div class="item-label">
                         <div class="item-title"><a href="{{ posts.url }}" title="访问 {{ posts.title }}">{{ posts.title }}</a></div>
                         <div class="item-meta clearfix">
@@ -33,4 +33,3 @@ description: "分享正在看和看过想看的一些书籍"
             {% endfor %}
         </div>
     </div>
-    {% include pagination.html %}
