--- a/home/index.html
+++ b/home/index.html
@@ -9,17 +9,17 @@ description:
             {% for posts in site.posts %}
             <div class="post-list-item">
                 <div class="post-list-item-container">
-                    <div class="item-thumb  bg-{{posts.background }}" style="min-height: 150px;background-image:url('{{posts.background-image }}');"></div>
+                    <div class="item-thumb  bg-{{posts.background }}" style="background-image:url('{{posts.background-image }}');"></div>
                     <a href="{{ posts.url }}">
                         <div class="item-desc">
-                            <p>{{ posts.content | strip_html | strip_newlines | truncate: 100 }}</p>
+                            <p>{{ posts.content | strip_html | strip_newlines | truncate: 80 }}</p>
                         </div>
                     </a>
                     <div class="item-slant reverse-slant  bg-{{ posts.background }}"></div>
                     <div class="item-slant">
                         <div class="liberxue-title">原创</div>
                     </div>
-                    <div class="item-label" style="height: 120px;">
+                    <div class="item-label">
                         <div class="item-title"><a href="{{ posts.url }}" title="访问 {{ posts.title }}">{{ posts.title }}</a></div>
                         <div class="item-meta clearfix">
                             <div class="item-meta-ico bg-ico-book" style="background: url('style/images/bg-ico.png') no-repeat;background-size: 40px auto;"></div>
