--- a/home/index.html
+++ b/home/index.html
@@ -20,7 +20,7 @@ layout: home
                     <div class="item-label">
                         <div class="item-title"><a target="_blank" href="{{ posts.url }}" title="访问 {{ posts.title }}">{{ posts.title }}</a></div>
                         <div class="item-meta clearfix">
-                            <div class="item-meta-ico bg-ico-book" style="background: url('style/images/bg-ico.png') no-repeat;background-size: 40px auto;"></div>
+                            <div class="item-meta-ico bg-ico-book" style="background: url('/style/images/bg-ico.png') no-repeat;background-size: 40px auto;"></div>
                             <div class="item-meta-cat">
                                 <a title="{{ posts.category }}" data-hover="{{ posts.category }}">{{ posts.category }}</a>
                                 <a data-hover='{{ posts.date | date: "%F %H:%M"}}'>{{ posts.date | date: "%F %H:%M"}}</a></div>
