--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             </div>
 
             <div id="nav07" class="iframe-container">
-                <iframe src="https://m.ityet.com/game/link/0.html"></iframe>
+                <iframe data-src="https://m.ityet.com/game/link/0.html"></iframe>
             </div>
             <!-- 第八页 - 文章推荐 -->
             <div id="nav08" class="iframe-container">
@@ -392,7 +392,7 @@
 <!--                    <div class="nav05_top_fj"><img src="statics/img/nav05_fj.png" alt="△"></div>-->
 <!--                </div>-->
                 <!-- 文件托管 -->
-                <iframe src="/home"></iframe>
+                <iframe data-src="/home"></iframe>
             </div>
 
             <!-- 第七页 - 本站源码 -->
