--- a/404.html
+++ b/404.html
@@ -148,7 +148,7 @@ description: "404"
     </div>
 </div>
 <!-- jQuery -->
-<script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>
+<script src="/statics/js/jquery-3.2.1.min.js"></script>
 <div class="cb-search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px; opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
     <input type="text" class="form-control cb-search-content" id="cb-search-content" placeholder="文章标题 日期 标签"
            style="background: rgba(0,0,0,0.5);
@@ -172,7 +172,7 @@ description: "404"
                   position:absolute;
                   position:fixed; top: 60px">
 </div>
-<script src="//cdn.bootcss.com/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.js"></script>
+<script src="/statics/js/bootstrap3-typeahead.min.js"></script>
 <script src="/search/js/cb-search.js"></script>
 </body>
 </html>
