--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
             <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
-            <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>文章推荐</span></li>
+            <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>推荐文章</span></li>
             <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
             <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
             <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站推荐</span></li>
