--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
             <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
-            <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>推荐文章</span></li>
+            <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>文章笔记</span></li>
             <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
             <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
-            <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站推荐</span></li>
-            <li id="cleft_li02"><img src="statics/font/ityet05.png"/><span>站长介绍</span></li>
+            <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站分享</span></li>
+            <li id="cleft_li02"><img src="statics/font/ityet05.png"/><span>个人简介</span></li>
             <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
             <li id="cleft_li04"><img src="statics/font/ityet03.png"/><span>联系我们</span></li>
             <!-- <li class="cleft_bottom"><img src="statics/font/nav_bottom.png"><span>宽度设置</span></li> -->
