--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 <img src="statics/img/ityet.svg"/>
                 <span>ITYet技术博客</span>
             </div>
-            <div class="iframe-container">
+            <div class="mp-iframe-container">
                 <iframe data-src="/home"></iframe>
             </div>
         </div>
