--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         <div id="exnav06">
             <div class="exn1_top">
                 <img src="statics/img/ityet.svg"/>
-                <span>ITYet技术博客</span>
+                <span>ITYet  技术分享</span>
             </div>
             <div class="mp-iframe-container">
                 <iframe data-src="/home"></iframe>
