--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="nav01_but">
                         <div class="nav01_but01">探索</div>
-                        <div class="nav01_but02">商业合作</div>
+                        <div class="nav01_but02">联系我</div>
                     </div>
                 </div>
                 <div class="nav01_right">
