--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
             <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>文章笔记</span></li>
             <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
-            <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
             <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站分享</span></li>
+            <li id="cleft_li07"><img src="statics/font/ityet06.png"/><span>休闲游戏</span></li>
+            <li id="cleft_li04"><img src="statics/font/ityet03.png"/><span>怀旧街机</span></li>
             <li id="cleft_li02"><img src="statics/font/ityet05.png"/><span>个人简介</span></li>
             <li id="cleft_li03"><img src="statics/font/ityet04.png"/><span>关于本站</span></li>
-            <li id="cleft_li04"><img src="statics/font/ityet03.png"/><span>联系我们</span></li>
             <!-- <li class="cleft_bottom"><img src="statics/font/nav_bottom.png"><span>宽度设置</span></li> -->
         </ul>
 
@@ -226,15 +226,16 @@
             </div>
 
             <!-- 第四页 - 联系方式 -->
-            <div id="nav04">
-                <div class="nav04_bg"></div>
-                <div class="nav04_zsc">
-                    <div>
-                        <p>联系方式 - 微信二维码</p>
-                        <img src="statics/img/qywx.png" alt="[企业微信二维码]" title="[企业微信二维码]">
-                    </div>
-                    <p>即使夜深人静，我们依然在努力！</p>
-                </div>
+            <div id="nav04" class="iframe-container">
+                <iframe data-src="https://m.ityet.com/fc/"></iframe>
+<!--                <div class="nav04_bg"></div>-->
+<!--                <div class="nav04_zsc">-->
+<!--                    <div>-->
+<!--                        <p>联系方式 - 微信二维码</p>-->
+<!--                        <img src="statics/img/qywx.png" alt="[企业微信二维码]" title="[企业微信二维码]">-->
+<!--                    </div>-->
+<!--                    <p>即使夜深人静，我们依然在努力！</p>-->
+<!--                </div>-->
             </div>
 
             <!-- 第五页 - 站点展示 -->
@@ -283,7 +284,7 @@
                     </div>
                     <!-- 作品展示模板NO5 -->
                     <div class="nav05_centent_mb">
-                        <a href="https://m.ityet.com/coder" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/coder/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
                             <h3>iCoder程序员黄历</h3>
                             <p>今天凶吉预知~</p>
@@ -325,7 +326,7 @@
                     </div>
                     <!-- 作品展示模板NO2 -->
                     <div class="nav05_centent_mb">
-                        <a href="https://m.ityet.com/coder" target="_blank" rel="noopener noreferrer">
+                        <a href="https://m.ityet.com/coder/" target="_blank" rel="noopener noreferrer">
                             <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
                             <h3>iCoder程序员黄历</h3>
                             <p>今天凶吉预知~</p>
@@ -335,7 +336,7 @@
                     <!-- 作品展示模板NO3 -->
                     <div class="nav05_centent_mb">
                         <a href="https://m.ityet.com/particle/" target="_blank" rel="noopener noreferrer">
-                            <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
+                            <div><img src="statics/img/nav05_zp04.jpg" alt="[]"></div>
                             <h3>科技感文字特效</h3>
                             <p>生成科技感的文字特效！</p>
                         </a>
@@ -344,7 +345,7 @@
                     <!-- 作品展示模板NO4 -->
                     <div class="nav05_centent_mb">
                         <a href="https://m.ityet.com/particle/" target="_blank" rel="noopener noreferrer">
-                            <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
+                            <div><img src="statics/img/nav05_zp02.jpg" alt="[]"></div>
                             <h3>科技感文字特效</h3>
                             <p>生成科技感的文字特效！</p>
                         </a>
@@ -353,7 +354,7 @@
                     <!-- 作品展示模板NO5 -->
                     <div class="nav05_centent_mb">
                         <a href="https://m.ityet.com/avatar/" target="_blank" rel="noopener noreferrer">
-                            <div><img src="statics/img/nav05_zp05.jpg" alt="[]"></div>
+                            <div><img src="statics/img/nav05_zp03.jpg" alt="[]"></div>
                             <h3>微信头像生成</h3>
                             <p>国庆头像框在线生成</p>
                         </a>
